//
// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package scql.engine;

import "engine/datasource/datasource.proto";

// `db.table` --> data source
// `db` and `table` value can be asterisk wildcard "*"
// Example:
// Having following rules:
// ```
//     (db="db1", table="t1", datasource_id="ds001")
//     (db="db1", table="t2", datasource_id="ds002")
//     (db="db1", table="*", datasource_id="ds003")
//     (db="db2", table="*", datasource_id="ds004")
// ```
// If request (db="db1", table="t1"), route to "ds001".
// If request (db="db1", table="t3"), route to "ds003".
// If request (db="db2", table="t1"), route to "ds004".
// If request (db="db3", table="t4"), no route rules match, fallback to default
// route datasource.
message RouteRule {
  string db = 1;
  string table = 2;
  string datasource_id = 3;
}

// EmbedRouterConf is used to bootstrap EmbedRouter from scratch
message EmbedRouterConf {
  repeated DataSource datasources = 1;
  repeated RouteRule rules = 2;
}